// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM API tests basic apm_8.0.0 Latency with a basic license when data is loaded time comparison returns some data 1`] = `
Array [
  Object {
    "x": 1627374180000,
    "y": 17647,
  },
  Object {
    "x": 1627374240000,
    "y": 15743,
  },
  Object {
    "x": 1627374300000,
    "y": 81311,
  },
  Object {
    "x": 1627374360000,
    "y": 12303,
  },
  Object {
    "x": 1627374420000,
    "y": 11344.4545454545,
  },
  Object {
    "x": 1627374480000,
    "y": 17843,
  },
  Object {
    "x": 1627374540000,
    "y": 35049.6666666667,
  },
  Object {
    "x": 1627374600000,
    "y": 19551,
  },
  Object {
    "x": 1627374660000,
    "y": 34125.5454545455,
  },
  Object {
    "x": 1627374720000,
    "y": 34247,
  },
  Object {
    "x": 1627374780000,
    "y": 9727,
  },
  Object {
    "x": 1627374840000,
    "y": 19711,
  },
  Object {
    "x": 1627374900000,
    "y": 33738.6363636364,
  },
  Object {
    "x": 1627374960000,
    "y": 17160.1428571429,
  },
  Object {
    "x": 1627375020000,
    "y": 14847,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Latency with a basic license when data is loaded time comparison returns some data 2`] = `
Array [
  Object {
    "x": 1627374180000,
    "y": 11951,
  },
  Object {
    "x": 1627374240000,
    "y": 13195.8,
  },
  Object {
    "x": 1627374300000,
    "y": 33892,
  },
  Object {
    "x": 1627374360000,
    "y": 18893.2222222222,
  },
  Object {
    "x": 1627374420000,
    "y": 24063,
  },
  Object {
    "x": 1627374480000,
    "y": 22984.1428571429,
  },
  Object {
    "x": 1627374540000,
    "y": 22100.3333333333,
  },
  Object {
    "x": 1627374600000,
    "y": 11497.6666666667,
  },
  Object {
    "x": 1627374660000,
    "y": 16639,
  },
  Object {
    "x": 1627374720000,
    "y": 16719,
  },
  Object {
    "x": 1627374780000,
    "y": 18352.7777777778,
  },
  Object {
    "x": 1627374840000,
    "y": 7635.57142857143,
  },
  Object {
    "x": 1627374900000,
    "y": 14345.6666666667,
  },
  Object {
    "x": 1627374960000,
    "y": 10291.5714285714,
  },
  Object {
    "x": 1627375020000,
    "y": 11847,
  },
]
`;

exports[`APM API tests trial apm_8.0.0 Transaction latency with a trial license when data is loaded with environment selected should return a non-empty anomaly series 1`] = `
Array [
  Object {
    "x": 1627373700000,
    "y": 430148.522515332,
    "y0": 0,
  },
  Object {
    "x": 1627374600000,
    "y": 431362.606025631,
    "y0": 0,
  },
]
`;
